// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global style 1`] = `
"
  === source ===
  
<template>
<h1>hello</h1>
</template>
<script>
import { css } from 'styled-vue'
export default {
  globalStyle: css\`h1 {color: red}\`
}
</script>


  === output ===
  
  <template>
  
<h1>hello</h1>

  </template>

  <script>
  export default {
  globalStyle: undefined // No CSS variables

};
  </script>

  
  <style scoped=\\"undefined\\" lang=\\"css\\">
  h1 {color: red}
  </style>
  
  
  "
`;

exports[`global style with scoped style 1`] = `
"
  === source ===
  
<template>
<h1>hello</h1>
</template>
<script>
import { css } from 'styled-vue'
export default {
  style: css\`h1 {color: cyan}\`,
  globalStyle: css\`h1 {color: red}\`
}
</script>


  === output ===
  
  <template>
  
<h1>hello</h1>

  </template>

  <script>
  export default {
  style: undefined // No CSS variables
  ,
  globalStyle: undefined // No CSS variables

};
  </script>

  
  <style scoped=\\"undefined\\" lang=\\"css\\">
  h1 {color: red}
  </style>
  

  <style scoped=\\"true\\" lang=\\"css\\">
  h1 {color: cyan}
  </style>
  
  
  "
`;

exports[`global style with scoped style with css variables 1`] = `
"
  === source ===
  
<template>
<h1>hello</h1>
</template>
<script>
import { css } from 'styled-vue'
export default {
  style: css\`h1 {color: cyan}\`,
  globalStyle: css\`h1 {color: red; font-size: \${vm => vm.fontSize};}\`
}
</script>


  === output ===
  
  <template>
  
<h1><styled-vue-global-css></styled-vue-global-css>hello</h1>

  </template>

  <script>
  export default {
  style: undefined // No CSS variables
  ,
  globalStyle: function (vm) {
    var v3b73e5fa = vm => vm.fontSize;

    return {
      \\"--v3b73e5fa\\": v3b73e5fa(vm)
    };
  }
};
  </script>

  
  <style scoped=\\"undefined\\" lang=\\"css\\">
  h1 {color: red; font-size: var(--v3b73e5fa);}
  </style>
  

  <style scoped=\\"true\\" lang=\\"css\\">
  h1 {color: cyan}
  </style>
  
  
  "
`;

exports[`no css 1`] = `
"
  === source ===
  
<template>
  <h1 style=\\"foo\\" :style=\\"{}\\">hello</h1>
</template>
<script>
export default {}
</script>


  === output ===
  
  <template>
  
<h1 style=\\"foo\\" :style=\\"{}\\">hello</h1>

  </template>

  <script>
  export default {};
  </script>

  
  
  "
`;

exports[`no vars 1`] = `
"
  === source ===
  
<template>
  <h1 style=\\"foo\\" :style=\\"{}\\">hello</h1>
</template>
<script>
import { css } from 'styled-vue'
export default {
  style: css\`h1 {color: red}\`
}
</script>


  === output ===
  
  <template>
  
<h1 style=\\"foo\\" :style=\\"{}\\">hello</h1>

  </template>

  <script>
  export default {
  style: undefined // No CSS variables

};
  </script>

  
  <style scoped=\\"true\\" lang=\\"css\\">
  h1 {color: red}
  </style>
  
  
  "
`;

exports[`simple 1`] = `
"
  === source ===
  
  <template>
    <h1 style=\\"foo\\" :style=\\"{}\\">hello</h1>
  </template>
  <script>
  import { css } from 'styled-vue'
  export default {
    style: css\`
    h1 {
      color: \${vm => vm.color};
      width: \${200 + 1}px;
    }
    \`
  }
  </script>
  

  === output ===
  
  <template>
  
<h1 style=\\"foo\\" :style=\\"$options.style(this, {})\\">hello</h1>

  </template>

  <script>
  export default {
  style: function (vm, existing) {
    var v6f754d6e = vm => vm.color;

    var v447fa43e = 200 + 1;
    return [existing, {
      \\"--v6f754d6e\\": v6f754d6e(vm),
      \\"--v447fa43e\\": v447fa43e + \\"px\\"
    }];
  }
};
  </script>

  
  <style scoped=\\"true\\" lang=\\"css\\">
  
  h1 {
    color: var(--v6f754d6e);
    width: var(--v447fa43e);
  }
  
  </style>
  
  
  "
`;
